Forced black hyperlinks in resume source code

--- a/resume/Ashutosh_Yadav_Resume.tex
+++ b/resume/Ashutosh_Yadav_Resume.tex
@@ -15,6 +15,10 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
+\hypersetup{
+    colorlinks=true,
+    allcolors=black
+}
 \usepackage{tabularx}
 \usepackage{fontawesome5}
 \usepackage[T1]{fontenc}
